# SAM

./: .cproject  .gitignore  .gitignore.swp  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt2  CTestTestfile.cmake  Dockerfile  LICENSE  Makefile  README  README.md  blah  blah.cpp  cmake_install.cmake  conanfile.txt  profile.py
ExecutableSrc/: Disclosure.cpp  FilterParser.cpp  PushPullBenchmark.cpp  RunEHSumOperator.cpp  RunEHVarianceOperator.cpp  RunPushPullOperator.cpp  RunSimpleSumOperator.cpp  RunTopKOperator.cpp  RunTriangles.cpp  RunTrianglesComplex.cpp  RunTrianglesComplexShorter.cpp  RunTrianglesSimple.cpp  SerialCountTriangles.cpp  ServerQuery.cpp  Servers.cpp  SimpleFeatures.cpp  SimpleFeaturesFewer.cpp  TestExponentialHistogramSumOperator.cpp  TestExponentialHistogramVarianceOperator.cpp  TestNCSpeed.cpp  TestPushPull.cpp  TestSimpleSum.cpp  TestTopK.cpp  TransformParser.cpp  WateringHole.cpp  ZeroMQBenchmark.cpp  ZmqTest.cpp  ml_v5.cpp  ml_v5_manual.cpp
NetflowSrc/: Netflow.cpp  Netflow.h
PushPullSrc/: AbstractConsumer.cpp  BaseProducer.cpp  BaseProducer.h  TestPushPull.cpp  ZeroMQPushPull.cpp  ZeroMQPushPull.h
ReadSocketSrc/: ReadSocket.cpp  ReadSocket.h  TestNCSpeed.cpp  ZeroMQPushPull.h  ZeroMqPushPull.cpp
SAL/: .gitignore  CMakeLists.txt  README.md
SAL/Parser/: .cache-main  .classpath  .gitignore  README.md  build.sbt
SAL/Parser/src/main/resources/: logback.xml
SAL/Parser/src/main/scala/sal/parsing/sam/: BaseParsing.scala  Constants.scala  EntireQuery.scala  Operator.scala  OperatorExp.scala  Parsing.scala  Sal.scala  TestParsing.scala  TupleTypes.scala  Util.scala  uuid.scala
SAL/Parser/src/main/scala/sal/parsing/sam/operators/: Average.scala  CountDistinct.scala  Operator.scala  OperatorExp.scala  SelfSimilarity.scala  Sum.scala  TopK.scala  Variance.scala
SAL/Parser/src/main/scala/sal/parsing/sam/preamble/: Preamble.scala  PreambleStatments.scala
SAL/Parser/src/main/scala/sal/parsing/sam/statements/: BaseStatements.scala  ConnectionStatementNetflowV5.scala  ConnectionStatementVast.scala  Connections.scala  Expressions.scala  FilterStatement.scala  ForEachStatement.scala  FunctionToken.scala  HashWithStatement.scala  PartitionStatement.scala  Statements.scala  StreamByStatement.scala  TransformStatement.scala
SAL/Parser/src/main/scala/sal/parsing/sam/subgraph/: Subgraph.scala  SubgraphStatement.scala  (+1 more)
SAL/Parser/src/test/scala/sal/parsing/sam/: ForEach.scala  Partition.scala  PreambleKeyWords.scala  TestUtil.scala
SAL/examples/: cnc.sal  disclosure.sal  ml.sal  ml2.sal  ml_more.sal  ml_v5.sal  moghadam.sal  remove.cpp  short.sal  triangle.sal  watering_hole.sal  xss.sal  zeroaccess.sal
SamSrc/: AbstractConsumer.h  AbstractConsumer.hpp  AbstractDataSink.hpp  AbstractDataSource.hpp  ActiveWindow.hpp  BaseComputation.cpp  BaseComputation.h  BaseComputation.hpp  BaseProducer.cpp  BaseProducer.h  BaseProducer.hpp  CollapsedConsumer.hpp  CollapsedFeatureMap.hpp  CompressedSparse.hpp  DormantWindow.hpp  EdgeDescription.hpp  EdgeRequest.hpp  EdgeRequestMap.hpp  ExponentialHistogram.hpp  ExponentialHistogramSum.hpp  ExponentialHistogramVariance.hpp  Expression.hpp  ExpressionTokenizer.hpp  FeatureMap.hpp  FeatureProducer.hpp  FeatureSubscriber.hpp  Features.hpp  Filter.hpp  FilterExpression.hpp  FilterTokenizer.hpp  Grammars.hpp  GraphStore.hpp  IdGenerator.hpp  Identity.hpp  ImuxData.hpp  ImuxDataItem.hpp  Learning.hpp  Netflow.cpp  Netflow.cpp~  Netflow.h  (+31 more)
SamSrc/protobuf/: NetflowEdgeRequest.pb.cc  NetflowEdgeRequest.pb.h  NetflowEdgeRequest.proto  README
SamSrc/sam/: AbstractConsumer.hpp  AbstractSubgraphPrinter.hpp  BaseComputation.hpp  BaseProducer.hpp  BaseSlidingWindow.hpp  CollapsedConsumer.hpp  CompressedSparse.hpp  CountDistinct.hpp  DormantWindow.hpp  Edge.hpp  EdgeDescription.hpp  EdgeRequest.hpp  EdgeRequestMap.hpp  ExponentialHistogram.hpp  ExponentialHistogramSum.hpp  ExponentialHistogramVariance.hpp  Expression.hpp  FeatureMap.hpp  FeatureProducer.hpp  FeatureSubscriber.hpp  Features.hpp  Filter.hpp  GraphStore.hpp  IdGenerator.hpp  Identity.hpp  JaccardIndex.hpp  KMedian.hpp  Label.hpp  LabelProducer.hpp  Learning.hpp  Max.hpp  Netflow.hpp  Netflowv5.hpp  Null.hpp  Project.hpp  ReadCSV.hpp  ReadFile.hpp  ReadFile2.hpp  ReadSocket.hpp  SimpleRarity.hpp  (+21 more)
SamSrc/sam/tuples/: Edge.hpp  NetflowV5.hpp  Tuplizer.hpp  VastNetflow.hpp
TestSrc/: TestActiveWindow.cpp  TestBaseComputation.cpp  TestCTU.cpp  TestCollapsedFeatureMap.cpp  TestCompressedSparse.cpp  TestCountDistinct.cpp  TestDormantWindow.cpp  TestEdge.cpp  TestEdgeDescription.cpp  TestEdgeRequest.cpp  TestEdgeRequestMap.cpp  TestExponentialHistogram.cpp  TestExpression.cpp  TestFeature.cpp  TestFeatureMap.cpp  TestFeatureSubscriber.cpp  TestFeatures.cpp  TestFilterExpression.cpp  TestFilterTokenizer.cpp  TestGraphStore.cpp  TestGraphStoreDouble.cpp  TestIdGenerator.cpp  TestJaccardIndex.cpp  TestKMedian.cpp  TestLabel.cpp  TestNetflow.cpp  TestNetflowGenerators.cpp  TestNetflowV5.cpp  TestNetflowv5.cpp  TestNull.cpp  TestNumTriangles.cpp  TestOperators.cpp  TestParallelMap.cpp  TestProtocolBuffers.cpp  TestReadCSV.cpp  TestSimpleRarity.cpp  TestSimpleSum.cpp  TestSlidingWindow.cpp  TestSubgraphDiskPrinter.cpp  TestSubgraphQuery.cpp  (+18 more)
TestSrc/Data/: 147.32.84.229.csv  CTU1SampleAsVast.csv
Testing/Temporary/: CTestCostData.txt
explore/: a.out  addToVector.cpp  basecomputation  basecomputation.cpp  covariancemlpack.cpp  employee.cpp  generatedDisclosure  generatedDisclosure.cpp  mini-xml1  mini-xml1.cpp  parser  parser.cpp  sum  tokens  tokens.cpp  tokens2  tokens2.cpp  tuple  tuple.cpp
proto/: CMakeLists.txt
scripts/: .gitignore  CTU2VAST.py  categorize_ip.py  find_best.py  learning-shap.ipynb  learning.py  ra.conf  requirements.txt
scripts/CTU/: CTU2VAST.py
scripts/SAM/: K-Medians_v2.ipynb  K-Medians_with_Anomalies.ipynb  KMedians.py  README.md  kmedoids_clustering.py  test_kmedoids_clustering.py
scripts/VAST/: fanout.py  sample.py  vast.py
tests/: TestActiveWindow  TestDormantWindow  TestExponentialHistogram  TestSimpleSum  TestSlidingWindow
(+5 files in other folders)
